fixed chrome error for the textarea form and also redisgned the gap form

--- a/css/gap.css
+++ b/css/gap.css
@@ -6,7 +6,7 @@
     width: 100%;
     min-width: 300px;
     margin-bottom: -50px;
-    margin-top: -20px;
+    margin-top: -30px;
   }
   
 #regForm  h1 {
@@ -28,7 +28,10 @@
   input.invalid {
     background-color: #ffdddd;
   }
-  
+  .inputfield {
+    display: flex;
+    flex-direction: column;
+  }
   .inputfield span {
     color: red;
     font-size: 15px;
@@ -114,4 +117,11 @@ table tr td:first-child::before {
 .count-farmers {
   display: flex;
   flex-direction: column;
+}
+.check{
+  display: flex;
+  justify-content: space-between;
+}
+#Processing {
+  margin: auto;
 }
